syntax = "proto3";

package models;

option go_package = "github.com/fiveret/product-service/grpc/models; models";

message Product{
    string name = 1;
    string description = 2;
    double price = 3;
    string category = 4;
    string currency = 5;
    uint32 inStock = 6;
    string status = 7;
    uint32 leadID = 8;
}

message Item{
    string name = 1;
    string description = 2;
    double price = 3;
    string category = 4;
    string currency = 5;
    uint32 inStock = 6;
    string status = 7;
}