syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "grpc/lead-grpc;proto";

service LeadProductService{
    rpc AddProductsToLead (AddProductsToLeadRequest) returns (AddProductsToLeadResponse){
        option (google.api.http) = {
            post: "/lead-product"
            body: "*"
        };
    }
    rpc DeleteLeadProducts (DeleteLeadProductsRequest) returns (DeleteLeadProductsResponse){
        option (google.api.http) = {
            delete: "/lead-product/{id}"
        };
    }
    rpc DeleteLeadProduct (DeleteLeadProductRequest) returns (DeleteLeadProductResponse){
        option (google.api.http) = {
            put: "/lead-product/{id}"
            body: "*"
        };
    }
}

message AddProductsToLeadRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    repeated uint32 product_ids = 2;
}

message AddProductsToLeadResponse{
    string message = 1;
}

message DeleteLeadProductRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
    uint32 product_id = 2;
}

message DeleteLeadProductResponse{
    string message = 1;
}

message DeleteLeadProductsRequest{
    uint32 id = 1 [(validate.rules).uint32.gt = 0];
}

message DeleteLeadProductsResponse{
    string message = 1;
}
