syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "common/types.proto";

option go_package = "./lead-service/grpc;lead";

service LeadService{
    rpc GetLead (GetLeadRequest) returns (GetLeadResponse);
    rpc GetLeads (GetLeadsRequest) returns (GetLeadsResponse);
    rpc DeleteLead (DeleteLeadRequest) returns (DeleteLeadResponse);
    rpc NewLead (NewLeadRequest) returns (NewLeadResponse);
    rpc UpdateLead (UpdateLeadRequest) returns (UpdateLeadResponse);
}

message GetLeadRequest{
    int32 id = 1;
}

message GetLeadResponse{
    string message = 1;
}

message GetLeadsRequest{
    google.protobuf.Empty empty = 1;
}
message GetLeadsResponse{
    repeated common.Lead leads = 1;
}



        app.Get("/:id", repository.GetLead(db))
		app.Get("", repository.GetLeads(db))
		app.Delete("/:id", repository.DeleteLead(db))
		app.Post("", repository.NewLead(db))
		app.Put("/:id", repository.UpdateLead(db))